[gd_scene load_steps=6 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://sprites/pixel.png" type="Texture" id=2]
[ext_resource path="res://sounds/bullet_impact.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/supercharge.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[node name="Bullet" type="RigidBody2D"]
position = Vector2( 184.453, 108.531 )
collision_layer = 8
collision_mask = 69
mode = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.941176, 0.0470588, 1 )
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ImpactSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sounds"

[node name="Sprite2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="ImpactSound" to="." method="_on_ImpactSound_finished"]
